fix letter-spacing

--- a/styles/global.sass
+++ b/styles/global.sass
@@ -13,13 +13,13 @@ body
   font-family: $w
   font-weight: 400
   font-size: 18px
-  letter-spacing: -0.05px
   max-width: 100vw
   overflow-x: hidden
 
   h1
     line-height: 1.2
     font-weight: 400
+    letter-spacing: -0.05px
     +r(0, 575)
       font-size: 42px
     +r(576, 991)
@@ -30,6 +30,7 @@ body
   h2
     line-height: 1.2
     font-weight: 400
+    letter-spacing: -0.05px
     +r(0, 575)
       font-size: 32px
     +r(576, 991)
@@ -40,6 +41,7 @@ body
   h3
     line-height: 1.2
     font-weight: 500
+    letter-spacing: -0.05px
     +r(0, 991)
       font-size: 24px
     +r(992)
@@ -49,6 +51,7 @@ body
     font-family: $q
     font-weight: 400
     line-height: 1.5
+    letter-spacing: 0px
     +r(0, 991)
       font-size: 16px
     +r(992)
